Bug ID:  25516 (League Documents page Item too long) fix

--- a/RDN.League/Content/main.css
+++ b/RDN.League/Content/main.css
@@ -1001,6 +1001,7 @@ ol.tree
 		display: block;
 		padding-left: 37px;
 	}
+    ol.tree li label a{white-space:nowrap}
     ol.tree li.group-icon label
 	{
         background: none;
